# Backend

./: .dockerinit.sh  .environment.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.dev.yml  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt
apps/car_wash/: apps.py  models.py  serializers.py  views.py
apps/car_wash/migrations/: 0001_initial.py
smart_wash/: asgi.py  settings.py  urls.py  wsgi.py
